--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Church of Legions — Many Paths, One Community</title>
   <meta name="description" content="Church of Legions — Many Paths, One Community. Explore our doctrines via the Deity Wheel." />
-  <link rel="icon" href="assets/img/logo.png" />
+  <link rel="icon" href="assets/img/CoL_Logo.png" />
   <style>
     :root{
       --bg: 
@@ -132,7 +132,7 @@
   <header>
     <div class="wrap nav" role="navigation" aria-label="Main">
       <a class="brand" href="/" aria-label="Church of Legions—Home">
-        <img src="assets/img/logo.png" alt="Church of Legions logo" />
+        <img src="assets/img/CoL_Logo.png" alt="Church of Legions logo" />
         <span class="title">Church of Legions</span>
       </a>
       <nav class="menu" aria-label="Site">
