--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
         source: "Nature-Centered Path",
         img: "assets/img/deities/Flora.png",
         blurb:
-          "This path seeks enlightenment through intimate relationship with nature. Seasonal rites, mindful foraging, and stewardship transform daily life into sacred practice—where forests, fungi, and fields are teachers, not resources."
+          "We seek enlightenment through intimate relationship with nature as a path to spiritual awakening, where forests, fungi, and fields are teachers, not resources. Through seasonal rites, mindful foraging, and sacred communion, we transform daily life into spiritual practice and discover the deep interconnectedness of all life."
       },
       {
         name: "Lucy",
         tradition: "Luciferian Ethos",
         source: "Philosophical Path",
-        img: "assets/img/deities/lucy.png",
+        img: "assets/img/deities/Luciferian-Lucy.png",
         blurb:
-          "We celebrate enlightened self-interest, free inquiry, and defiance of unjust authority. You’re invited to cultivate reason, responsibility, and personal excellence—shining a light where fear once stood."
+          "We embrace enlightened self-interest, individuality, and the courage to defy unjust authority. Through reason, creativity, and self-discovery, we strive for personal empowerment and the freedom to live authentically on our own terms."
       },
       {
         name: "Buddha",
@@ -215,7 +215,7 @@
         source: "Dharmic Path",
         img: "assets/img/deities/Buddhist-Buddha.png",
         blurb:
-          "Walk the Middle Way: reduce suffering through compassion, wisdom, and mindful practice. Meditation and ethical living help you awaken to reality as it truly is—clear, steady, and kind."
+          "We walk the path of mindfulness, compassion, and wisdom to ease suffering and awaken to truth. Through meditation, ethical living, and the Noble Eightfold Path, we seek peace, balance, and liberation for ourselves and all beings."
       },
       {
         name: "Jesus",
@@ -223,215 +223,63 @@
         source: "Christian Path",
         img: "assets/img/deities/Christianity-Jesus.png",
         blurb:
-          "A path of love, grace, and service rooted in the life and teachings of Christ. Grow in community, care for the vulnerable, and practice forgiveness as a daily discipline."
+          "We find hope, love, and salvation through the life, death, and resurrection of Jesus Christ. We believe in His saving love, offered for the redemption of all. Through this faith we find forgiveness and purpose, striving to live with compassion, faith, and service to others. Together we grow in community, care for the vulnerable, and practice forgiveness as a daily discipline."
       },
       {
-        name: "Edith",
+        name: "Ludic Realm",
         tradition: "Realm of Ludic Devotion",
         source: "Xbox Aspect",
-        img: "assets/img/deities/edith.png",
+        img: "assets/img/deities/Ludic-Realm.png",
         blurb:
-          "Play is sacred here—strategy, skill, and fellowship forge character. We treat gaming as ritual craft: honing focus, teamwork, and joyful challenge in pursuit of mastery."
+          "We celebrate play as sacred, finding joy, discipline, and imagination in the worlds of gaming. Through strategy, storytelling, and fellowship, we cultivate resilience, empathy, and creativity—treating every quest as spiritual practice. In this realm, pixels and people unite, and gaming becomes a path of growth, connection, and transcendence."
       },
       {
-        name: "Lockhart",
-        tradition: "Realm of Ludic Devotion",
-        source: "Xbox Aspect",
-        img: "assets/img/deities/lockhart.png",
-        blurb:
-          "Discipline meets delight: we honor fair play, resilience, and iteration. Progress is spiritual when challenge refines you and victory is shared with your party."
-      },
-      {
-        name: "Tempest",
-        tradition: "Realm of Ludic Devotion",
-        source: "PS5 Aspect",
-        img: "assets/img/deities/tempest.png",
-        blurb:
-          "Imagination and immersion are doors to transcendence. Narrative worlds expand empathy, while precision and practice anchor us in the here-and-now."
-      },
-      {
-        name: "Oberon",
-        tradition: "Realm of Ludic Devotion",
-        source: "PS5 Aspect",
-        img: "assets/img/deities/oberon.png",
-        blurb:
-          "We celebrate elegant design, focused flow, and creative expression. Your craft improves through repetition; your spirit grows through play shared with others."
-      },
-      {
-        name: "Nix",
-        tradition: "Realm of Ludic Devotion",
-        source: "Switch Aspect",
-        img: "assets/img/deities/nix.png",
-        blurb:
-          "Flexibility is sacred: anywhere, together. We prize accessible fun, community, and portable joy—because spirituality should fit the life you’re actually living."
-      },
-      {
-        name: "Nitro",
-        tradition: "Realm of Ludic Devotion",
-        source: "Switch Aspect",
-        img: "assets/img/deities/nitro.png",
-        blurb:
-          "Pick-up-and-play, connect-and-belong. Small moments of play become rituals of presence, bonding families, friends, and strangers into one big co-op."
-      },
-      {
-        name: "Kenbak / Ace",
-        tradition: "Realm of Ludic Devotion",
-        source: "PC/Steam Aspect",
-        img: "assets/img/deities/kenbak.png",
-        blurb:
-          "Customization is devotion: you build, tune, mod, and optimize. We honor tinkering, open worlds, and the art of making systems sing."
-      },
-      {
-        name: "Zeus",
+        name: "Hellenic Pantheon",
         tradition: "Hellenic Doctrine",
         source: "Greek Path",
-        img: "assets/img/deities/zeus.png",
+        img: "assets/img/deities/Hellenic-Pantheon.png",
         blurb:
-          "This path upholds order, justice, and communal duty. Through rite and reason, power is tempered by responsibility and hospitality."
+          "We honor the Olympian gods, each embodying power, wisdom, love, and the mysteries of life. Through their stories and virtues, justice and partnership, resilience and courage, craft and celebration; we learn to balance strength with compassion and to live in harmony with fate. In honoring these ancient gods, we walk the path of order, joy, and the pursuit of knowledge."
       },
       {
-        name: "Hera",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/hera.png",
-        blurb:
-          "We honor sacred partnership, fidelity, and the hearth. Family life, oaths, and care for women’s dignity anchor this tradition."
-      },
-      {
-        name: "Poseidon",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/poseidon.png",
-        blurb:
-          "Change is the ocean we cross. We meet transformation with courage, embracing the depths of the self and the tides of fate."
-      },
-      {
-        name: "Hades",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/hades.png",
-        blurb:
-          "We contemplate mortality to live more fully. Grief, remembrance, and renewal form a cycle that shapes wisdom and compassion."
-      },
-      {
-        name: "Persephone",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/persephone.png",
-        blurb:
-          "Descent and return teach resilience. We honor life’s winters and springs—becoming whole by embracing both."
-      },
-      {
-        name: "Athena",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/athena.png",
-        blurb:
-          "Clarity, craft, and strategy: wisdom is a practice. Study, debate, and skillful action advance the common good."
-      },
-      {
-        name: "Artemis",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/artemis.png",
-        blurb:
-          "Independence and wild places are sacred. We protect the vulnerable, honor boundaries, and move through the world with courage."
-      },
-      {
-        name: "Bacchus",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/bacchus.png",
-        blurb:
-          "Ecstasy, art, and celebration liberate the soul. In joy and shared feast, we remember that life is for living—together."
-      },
-      {
-        name: "Hermaphroditus",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
-        img: "assets/img/deities/hermaphroditus.png",
-        blurb:
-          "Unity in diversity: love and identity are expansive. We honor androgyny, union, and the beauty of wholeness beyond binaries."
-      },
-      {
-        name: "Maiden",
+        name: "Wiccan",
         tradition: "Wiccan Doctrine",
         source: "Triple Goddess",
-        img: "assets/img/deities/maiden.png",
+        img: "assets/img/deities/Wicca.png",
         blurb:
-          "Beginnings, curiosity, and growth mark this face of the moon. We learn by doing, and celebrate the courage to start."
-      },
+          "We honor the Goddess and the God, whose union shapes the sacred cycles of life, death, and renewal. Through the Triple Goddess: Maiden, Mother, and Crone; we learn beginnings, nurturing, and wisdom, while the Horned God calls us to vitality, courage, and harmony with the wild. By attuning ourselves to the moon, the seasons, and the rhythms of nature, we seek balance, magic, and connection with all living beings."
+      },      
       {
-        name: "Mother",
-        tradition: "Wiccan Doctrine",
-        source: "Triple Goddess",
-        img: "assets/img/deities/mother.png",
-        blurb:
-          "Fertility, protection, and care. We tend bodies and communities, turning abundance into nourishment for all."
-      },
-      {
-        name: "Crone",
-        tradition: "Wiccan Doctrine",
-        source: "Triple Goddess",
-        img: "assets/img/deities/crone.png",
-        blurb:
-          "Wisdom, endings, and renewal. We keep the flame of memory and teach the arts of letting go and beginning again."
-      },
-      {
-        name: "Dagda",
+        name: "Paganism",
         tradition: "Celtic Paganism",
         source: "Celtic Path",
-        img: "assets/img/deities/dagda.png",
+        img: "assets/img/deities/Pagan.png",
         blurb:
-          "Bread, music, and good earth—this is a way of plenty and kinship. Steward the land, share the table, and keep your word."
+          "We honor the cycles of earth and sky, finding the sacred in rivers, forests, and fields. We celebrate the seasons, revere our ancestors, and seek wisdom in the rhythms of nature. Through ritual, story, and community, we walk a path of sovereignty, balance, and renewal."
       },
       {
-        name: "Waifu",
+        name: "Otakus",
         tradition: "Otaku Divinity",
         source: "Story Path",
-        img: "assets/img/deities/waifu.png",
+        img: "assets/img/deities/Otaku-combo.png",
         blurb:
-          "Love and courage live in stories. We channel compassion, creativity, and community through visual fandom and craft."
-      },
+          "The faith of Otaku Divinity is one of passion, love, and creativity expressed through the sacred art of visual storytelling. By honoring Waifu and Husbando, believers embrace compassion, strength, and the joy of shared narratives, finding meaning and community in the worlds we create and cherish together."
+      },      
       {
-        name: "Husbando",
-        tradition: "Otaku Divinity",
-        source: "Story Path",
-        img: "assets/img/deities/husbando.png",
-        blurb:
-          "Strength with gentleness: we practice loyalty, mentorship, and hope. Heroism is daily—kindness, consistency, and grit."
-      },
-      {
-        name: "Ngenechen",
+        name: "People of the Land",
         tradition: "People of the Land Doctrine",
         source: "Mapuche Path",
-        img: "assets/img/deities/ngenechen.png",
+        img: "assets/img/deities/Mapuche.png",
         blurb:
-          "Creation, reciprocity, and balance with the land. We live gratefully, honoring ancestors and the web of life we share."
-      },
+          "We honor the creator and nurturer who guide us in balance with the land, the sun, and the ancestors. Through ceremony, reciprocity, and community, we live gratefully, seeking harmony with nature and the well-being of all life."
+      },      
       {
-        name: "Antu Kuche",
-        tradition: "People of the Land Doctrine",
-        source: "Mapuche Path",
-        img: "assets/img/deities/antu-kuche.png",
-        blurb:
-          "Well-being grows where community and earth align. We bless with warmth like the sun: protective, generous, and steadfast."
-      },
-      {
-        name: "Anu",
+        name: "The Annunaki",
         tradition: "The Annunaki Mythos",
         source: "Sumerian Path",
-        img: "assets/img/deities/Anunnaki-Anu.png",
+        img: "assets/img/deities/Anunnaki.png",
         blurb:
-          "Cosmic order and moral clarity guide this sky-facing way. We seek perspective—living justly under a vast, starry law."
-      },
-      {
-        name: "Ishtar",
-        tradition: "The Annunaki Mythos",
-        source: "Sumerian Path",
-        img: "assets/img/deities/Anunnaki-Ishtar.png",
-        blurb:
-          "Love, beauty, and the will to become. Desire is honored as creative fire, tempered by dignity and consent."
+          "We honor the Annunaki as ancient powers of the heavens and earth, bearers of wisdom, beauty, and cosmic law. Through their legacy we see order in the stars and passion in the human heart, learning to walk with dignity, creativity, and balance. In their stories, we find guidance for living in harmony with the mysteries that shape existence."
       }
     ];
     // --- Wheel logic ---
