--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: radial-gradient(1200px 800px at 50% -20%, #1a2030 0, #0e0f12 50%);
+      background-image: url('assets/img/background.png');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
       color: var(--ink);
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
