--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         name: "Flora",
         tradition: "Sacred Union of the Flora Doctrine",
         source: "Nature-Centered Path",
-        img: "assets/img/Flora.png",
+        img: "primary_col_page/assets/img/Flora.png",
         blurb:
           "We seek enlightenment through intimate relationship with nature as a path to spiritual awakening, where forests, fungi, and fields are teachers, not resources. Through seasonal rites, mindful foraging, and sacred communion, we transform daily life into spiritual practice and discover the deep interconnectedness of all life."
       },
