--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Church of Legions — Many Paths, One Community</title>
   <meta name="description" content="Church of Legions — Many Paths, One Community. Explore our doctrines via the Deity Wheel." />
-  <link rel="icon" href="assets/img/CoL_Logo.png" />
+  <link rel="icon" href="assets/img/CoL Logo.png" />
   <style>
     :root{
       --bg: #0e0f12;
@@ -24,7 +24,7 @@
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background-image: url('assets/img/background.png');
+      background-image: url('assets/img/background.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -136,7 +136,7 @@
   <header>
     <div class="wrap nav" role="navigation" aria-label="Main">
       <a class="brand" href="/" aria-label="Church of Legions—Home">
-        <img src="assets/img/CoL_Logo.png" alt="Church of Legions logo" />
+        <img src="assets/img/CoL Logo.png" alt="Church of Legions logo" />
         <span class="title">Church of Legions</span>
       </a>
       <nav class="menu" aria-label="Site">
@@ -202,7 +202,7 @@
         name: "Flora",
         tradition: "Sacred Union of the Flora Doctrine",
         source: "Nature-Centered Path",
-        img: "assets/img/Flora.png",
+        img: "assets/img/deities/Flora.png",
         blurb:
           "We seek enlightenment through intimate relationship with nature as a path to spiritual awakening, where forests, fungi, and fields are teachers, not resources. Through seasonal rites, mindful foraging, and sacred communion, we transform daily life into spiritual practice and discover the deep interconnectedness of all life."
       },
