--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         name: "Ludic Realm",
         tradition: "Realm of Ludic Devotion",
         source: "Xbox Aspect",
-        img: "assets/img/deities/Ludic-Realm.png",
+        img: "assets/img/deities/Ludic Realm.png",
         blurb:
           "We celebrate play as sacred, finding joy, discipline, and imagination in the worlds of gaming. Through strategy, storytelling, and fellowship, we cultivate resilience, empathy, and creativity—treating every quest as spiritual practice. In this realm, pixels and people unite, and gaming becomes a path of growth, connection, and transcendence."
       },
