--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     }
     .nav{
       display:flex;align-items:center;justify-content:space-between;
-      height:64px;
+      height:90px;
     }
     .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:40px;height:40px;object-fit:contain;border-radius:8px}
+    .brand img{width:80px;height:80px;object-fit:contain;border-radius:8px}
     .brand .title{font-weight:700;letter-spacing:.2px}
     .menu{display:flex;align-items:center;gap:20px}
     .menu a{color:var(--muted)}
@@ -201,7 +201,6 @@
       {
         name: "Flora",
         tradition: "Sacred Union of the Flora Doctrine",
-        source: "Nature-Centered Path",
         img: "assets/img/deities/Flora.png",
         blurb:
           "We seek enlightenment through intimate relationship with nature as a path to spiritual awakening, where forests, fungi, and fields are teachers, not resources. Through seasonal rites, mindful foraging, and sacred communion, we transform daily life into spiritual practice and discover the deep interconnectedness of all life."
@@ -209,15 +208,13 @@
       {
         name: "Lucy",
         tradition: "Luciferian Ethos",
-        source: "Philosophical Path",
         img: "assets/img/deities/Luciferian-Lucy.png",
         blurb:
           "We embrace enlightened self-interest, individuality, and the courage to defy unjust authority. Through reason, creativity, and self-discovery, we strive for personal empowerment and the freedom to live authentically on our own terms."
       },
       {
         name: "Buddha",
-        tradition: "Buddhist Doctrine",
-        source: "Dharmic Path",
+        tradition: "Dharmic Path",
         img: "assets/img/deities/Buddhist-Buddha.png",
         blurb:
           "We walk the path of mindfulness, compassion, and wisdom to ease suffering and awaken to truth. Through meditation, ethical living, and the Noble Eightfold Path, we seek peace, balance, and liberation for ourselves and all beings."
@@ -225,63 +222,48 @@
       {
         name: "Jesus",
         tradition: "Christian Doctrine",
-        source: "Christian Path",
         img: "assets/img/deities/Christianity-Jesus.png",
         blurb:
           "We find hope, love, and salvation through the life, death, and resurrection of Jesus Christ. We believe in His saving love, offered for the redemption of all. Through this faith we find forgiveness and purpose, striving to live with compassion, faith, and service to others. Together we grow in community, care for the vulnerable, and practice forgiveness as a daily discipline."
       },
       {
-        name: "Ludic Realm",
         tradition: "Realm of Ludic Devotion",
-        source: "Xbox Aspect",
         img: "assets/img/deities/Ludic Realm.png",
         blurb:
           "We celebrate play as sacred, finding joy, discipline, and imagination in the worlds of gaming. Through strategy, storytelling, and fellowship, we cultivate resilience, empathy, and creativity—treating every quest as spiritual practice. In this realm, pixels and people unite, and gaming becomes a path of growth, connection, and transcendence."
       },
       {
-        name: "Hellenic Pantheon",
-        tradition: "Hellenic Doctrine",
-        source: "Greek Path",
+        tradition: "Hellenic Pantheon",
         img: "assets/img/deities/Hellenic-Pantheon.png",
         blurb:
           "We honor the Olympian gods, each embodying power, wisdom, love, and the mysteries of life. Through their stories and virtues, justice and partnership, resilience and courage, craft and celebration; we learn to balance strength with compassion and to live in harmony with fate. In honoring these ancient gods, we walk the path of order, joy, and the pursuit of knowledge."
       },
       {
-        name: "Wiccan",
         tradition: "Wiccan Doctrine",
-        source: "Triple Goddess",
         img: "assets/img/deities/Wicca.png",
         blurb:
           "We honor the Goddess and the God, whose union shapes the sacred cycles of life, death, and renewal. Through the Triple Goddess: Maiden, Mother, and Crone; we learn beginnings, nurturing, and wisdom, while the Horned God calls us to vitality, courage, and harmony with the wild. By attuning ourselves to the moon, the seasons, and the rhythms of nature, we seek balance, magic, and connection with all living beings."
       },      
       {
-        name: "Paganism",
-        tradition: "Celtic Paganism",
-        source: "Celtic Path",
+        tradition: "Paganism",
         img: "assets/img/deities/Pagan.png",
         blurb:
           "We honor the cycles of earth and sky, finding the sacred in rivers, forests, and fields. We celebrate the seasons, revere our ancestors, and seek wisdom in the rhythms of nature. Through ritual, story, and community, we walk a path of sovereignty, balance, and renewal."
       },
       {
-        name: "Otakus",
         tradition: "Otaku Divinity",
-        source: "Story Path",
         img: "assets/img/deities/Otaku-combo.png",
         blurb:
           "The faith of Otaku Divinity is one of passion, love, and creativity expressed through the sacred art of visual storytelling. By honoring Waifu and Husbando, believers embrace compassion, strength, and the joy of shared narratives, finding meaning and community in the worlds we create and cherish together."
       },      
       {
-        name: "People of the Land",
         tradition: "People of the Land Doctrine",
-        source: "Mapuche Path",
         img: "assets/img/deities/Mapuche.png",
         blurb:
           "We honor the creator and nurturer who guide us in balance with the land, the sun, and the ancestors. Through ceremony, reciprocity, and community, we live gratefully, seeking harmony with nature and the well-being of all life."
       },      
       {
-        name: "The Annunaki",
-        tradition: "The Annunaki Mythos",
-        source: "Sumerian Path",
+        tradition: "The Annunaki",
         img: "assets/img/deities/Anunnaki.png",
         blurb:
           "We honor the Annunaki as ancient powers of the heavens and earth, bearers of wisdom, beauty, and cosmic law. Through their legacy we see order in the stars and passion in the human heart, learning to walk with dignity, creativity, and balance. In their stories, we find guidance for living in harmony with the mysteries that shape existence."
