--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
     <section class="content-section">
       <h1>Our Mission</h1>
       <p>At The Church of Legions, we honor all paths and traditions, believing that every faith and every passion carries wisdom worth celebrating. We embrace diversity while rejecting exclusion or discrimination based on religion, sex, or orientation.</p>
-      <p>Our mission is to:</p>
+      <h2>Our mission is to:</h2>
       <ul>
         <li><strong>Celebrate</strong> individuality and personal fulfillment.</li>
         <li><strong>Provide</strong> safe, supportive communities for spiritual and creative growth.</li>
@@ -212,3 +212,4 @@
 </body>
 
 </html>
+
