--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@
     }    
     /* deity / Wheel */
     .deity{padding:32px 0 20px}
-    .tagline{color:var(--muted);font-size:14px;letter-spacing:.4px;text-transform:uppercase;text-align:center}
+    .tagline{
+      color:#e9edf3;
+      font-size:1.25rem;  /* equivalent to 20px - use rem instead */
+      letter-spacing:.4px;
+      text-transform:uppercase;
+      text-align:center;
+      text-shadow: 0 2px 8px rgba(0,0,0,.8);
+        }
     h1{margin:.25rem 0 0;font-size:2.1rem;line-height:1.2;text-align:center}
     .wheel{
       margin:24px 0 16px;
